src/objects/Packing_Grp__c.object
<CustomObject>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <label>Legacy Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_By__c</fullName>
        <label>Legacy Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Updated_Date__c</fullName>
        <label>Legacy Updated Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Code__c</fullName>
        <label>Packing Code</label>
        <picklist>
            <picklistValues>
                <fullName>MFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOD2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SILK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Packing_Group_Code__c</fullName>
        <externalId>true</externalId>
        <label>Packing Group Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Packing_Group_Description__c</fullName>
        <label>Packing Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminal__c</fullName>
        <label>Terminal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Packing Grp</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Packing_Code__c</columns>
        <columns>Packing_Group_Code__c</columns>
        <columns>Packing_Group_Description__c</columns>
        <columns>Sequence_Number__c</columns>
        <columns>Terminal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Packing Grp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Packing Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>